--- a/centreon/www/include/monitoring/recurrentDowntime/formDowntime.html
+++ b/centreon/www/include/monitoring/recurrentDowntime/formDowntime.html
@@ -28,9 +28,9 @@ jQuery(function(){
         }
     });
 
-    if ($$('input[name="dt_id"]')[0].value) {
+    if (jQuery('input[name="dt_id"]')[0].value) {
         jQuery.ajax({
-            url: './include/monitoring/recurrentDowntime/ajaxPeriods.php?dt_id=' + $$('input[name="dt_id"]')[0].value,
+            url: './include/monitoring/recurrentDowntime/ajaxPeriods.php?dt_id=' + jQuery('input[name="dt_id"]')[0].value,
             success: function(data, status) {
                 listPeriod = data;
                 jQuery.each(listPeriod, function(infos, index){
@@ -118,34 +118,39 @@ function getServices(host_id) {
  * Validate form
  */
 function validForm() {
-    $('msg_err').hide();
-    $('msg_err').innerHTML = '';
+    jQuery('#msg_err').hide();
+    jQuery('#msg_err').innerHTML = '';
 
     /*
      * Validate period
      */
+
     if (false == validPeriods()) {
-        msgErr.each(function (err) {
-            $('msg_err').innerHTML += '<br/>' + err;
+        jQuery.each(msgErr, function (index, value) {
+            jQuery('#msg_err').append('<br/>' + value);
         });
-        $('msg_err').show();
+        jQuery('#msg_err').show();
         return false;
     }
 
     /*
      * Validate relation
      */
-    nbRel = $$('select[name="host_relation[]"] > option:selected').length;
-    nbRel = nbRel + $$('select[name="hostgroup_relation[]"] > option:selected').length;
-    nbRel = nbRel + $$('select[name="svc_relation[]"] > option:selected').length;
-    nbRel = nbRel + $$('select[name="svcgroup_relation[]"] > option:selected').length;
+    nbRel = jQuery('select[name="host_relation[]"] > option:selected').length;
+    nbRel = nbRel + jQuery('select[name="hostgroup_relation[]"] > option:selected').length;
+    nbRel = nbRel + jQuery('select[name="svc_relation[]"] > option:selected').length;
+    nbRel = nbRel + jQuery('select[name="svcgroup_relation[]"] > option:selected').length;
+
     if (nbRel == 0) {
-        $('msg_err').innerHTML = msg_err_norelation;
-        $('msg_err').show();
+
+      //  jQuery('#msg_err').show();
+
+        jQuery('#msg_err').html(msg_err_norelation);
+        jQuery('#msg_err').show();
         return false;
     }
 
-    $('form_dt').submit();
+    jQuery('#form_dt').submit();
     return true;
 }
 
@@ -165,7 +170,7 @@ function validPeriods()
     msgErr = new Array();
 
     for (var i = 0; i <= periods; i++) {
-        periodTypeArray = $$('input[name="periods[' + i + '][period_type]"]');
+        periodTypeArray = jQuery('input[name="periods[' + i + '][period_type]"]');
         periodType = 'undefined';
         if (periodTypeArray.length > 0) {
             for (var j = 0; j < periodTypeArray.length; j++) {
@@ -181,11 +186,12 @@ function validPeriods()
                      * Check days
                      */
                     var nbDays = 0;
-                    $$('input[name="periods[' + i +'][days][]"]').each(function(day){
+                    jQuery('input[name="periods[' + i +'][days][]"]').each(function(index, day){
                         if (day.checked == true) {
                             nbDays++;
                         }
                     });
+
                     if (nbDays == 0 && periodType != 'specific_date') {
                         valid = false;
                         msgErr.push('Error add days ' + i);
@@ -193,8 +199,8 @@ function validPeriods()
                     /*
                      * Get period times
                      */
-                    periodStart = $$('input[name="periods[' + i + '][start_period]"]')[0].value.split(':'); console.log(periodStart);
-                    periodEnd = $$('input[name="periods[' + i + '][end_period]"]')[0].value.split(':');
+                    periodStart = jQuery('input[name="periods[' + i + '][start_period]"]')[0].value.split(':');
+                    periodEnd = jQuery('input[name="periods[' + i + '][end_period]"]')[0].value.split(':');
                     if (periodStart.length != 2 || periodEnd.length != 2) {
                         msgErr.push('Error bad time format ' + i);
                         valid = false;
