--- a/centreon/www/include/views/graphs/graphs.html
+++ b/centreon/www/include/views/graphs/graphs.html
@@ -196,7 +196,7 @@
 <script src="./include/common/javascript/jquery/jquery.cookie.js"></script>
 <script src="./include/common/javascript/centreon/centreon-tour.js"></script>
 <script>
-var defaultCharts = JSON.parse('{$defaultCharts}');
+var defaultCharts = {$defaultCharts};
 var nbDisplayedCharts = {$nbDisplayedCharts};
 var tooManyChartMsg = "{t}You cannot add more charts. The maximum charts is {/t}" + nbDisplayedCharts;
 </script>
