--- a/centreon/www/include/home/customViews/widgetParam.html
+++ b/centreon/www/include/home/customViews/widgetParam.html
@@ -69,7 +69,8 @@
                 if (typeof(view) != 'undefined') {
                     var viewId = view.item(0).firstChild.data;
                     parent.jQuery(
-                        "[name=widget_" + viewId + "_" + widgetId + "]").attr('src', widgetUrl + '?widgetId=' + widgetId
+                        "[name=widget_" + viewId + "_" + widgetId + "]").attr('src', widgetUrl +
+						'?widgetId=' + widgetId + '&customViewId=' + viewId
 					);
                     jQuery('#config-popin').centreonPopin('close');
                 } else if (typeof(error) != 'undefined') {
