Add CURLOPT_SSL_ to bypass certificate (#6027)
* Add CURLOPT_SSL_ to bypass certificat

* feat(kb) add ignore ssl certificate option

--- a/centreon/www/include/Administration/parameters/knowledgeBase/formKnowledgeBase.html
+++ b/centreon/www/include/Administration/parameters/knowledgeBase/formKnowledgeBase.html
@@ -47,6 +47,10 @@
             <td class="FormRowField"><img class="helpTooltip" name="tip_knowledge_wiki_account_password">&nbsp;{$form.kb_wiki_password.label}</td>
             <td class="FormRowValue">{$form.kb_wiki_password.html}</td>
         </tr>
+        <tr class="list_two">
+            <td class="FormRowField"><img class="helpTooltip" name="tip_knowledge_wiki_certificate">&nbsp;{$form.kb_wiki_certificate.label}</td>
+            <td class="FormRowValue">{$form.kb_wiki_certificate.html}</td>
+        </tr>
     </table>
     {if !$valid}
     <div id="validForm"><p>{$form.submitC.html}&nbsp;&nbsp;&nbsp;{$form.reset.html}</p></div>
