Update style.css (#6122)
#6003

--- a/centreon/www/Themes/Centreon-2/style.css
+++ b/centreon/www/Themes/Centreon-2/style.css
@@ -2171,7 +2171,7 @@ textarea.default-textarea {
 .graphZone {
     margin-bottom: 40px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
 }
