--- a/centreon/www/Themes/Centreon-2/style.css
+++ b/centreon/www/Themes/Centreon-2/style.css
@@ -1756,6 +1756,10 @@ span.state_badge {
     background: transparent !important;
 }
 
+#colorbox {
+    outline: none;
+}
+
 #cboxContent {
     border-radius: 4px;
     border: 1px solid #a7a8ac;
@@ -1772,6 +1776,7 @@ span.state_badge {
     width: 18px !important;
     right: -10px !important;
     border-radius: 10px;
+    border-width: 0px;
 }
 
 /* ColorBox CSS */
