Wizard form new design. Progress bar added.

--- a/centreon/www/front_src/src/styles/_main.scss
+++ b/centreon/www/front_src/src/styles/_main.scss
@@ -3,6 +3,7 @@
 @import "partials/header";
 @import "partials/buttons";
 @import "partials/form/form";
+@import "partials/progress-bar";
 
 body {
   margin: 0;
