Wizard form changes. Multiple select added. Separate componentets for manual input of servers and select servers from dropdown.

--- a/centreon/www/front_src/src/styles/_main.scss
+++ b/centreon/www/front_src/src/styles/_main.scss
@@ -4,6 +4,7 @@
 @import "partials/buttons";
 @import "partials/form/form";
 @import "partials/progress-bar";
+@import "partials/helpers";
 
 body {
   margin: 0;
