--- a/centreon/www/front_src/src/styles/partials/form/_form.scss
+++ b/centreon/www/front_src/src/styles/partials/form/_form.scss
@@ -204,3 +204,9 @@ input[type=checkbox]:checked ~.custom-control-label::after {
 input[type=checkbox]:checked ~.custom-control-label::before {
   background: none;
 }
+.css-10odw4q,
+.css-1492t68,
+.css-10nd86i {
+  font-family: Roboto,sans-serif;
+  font-size: 13px;
+}
