--- a/centreon/www/front_src/src/styles/partials/form/_form.scss
+++ b/centreon/www/front_src/src/styles/partials/form/_form.scss
@@ -24,6 +24,13 @@
         font-family: Roboto,sans-serif;
       }
     }
+    .css-1aya2g8,
+    .css-2o5izw {
+      height: 25px;
+      min-height: 0;
+      border-radius: 2px;
+      border: 1px solid #cdcdcd;
+    }
   }
   &-group {
     margin-bottom: 15px;
@@ -63,9 +70,6 @@
     color: #242f3a;
     font-family: Roboto,sans-serif;
     margin: 20px 0;
-  }
-  &-control {
-    
   }
   &-buttons {
     text-align: right;
