Style changes. Loader Added

--- a/centreon/www/front_src/src/styles/_main.scss
+++ b/centreon/www/front_src/src/styles/_main.scss
@@ -5,6 +5,8 @@
 @import "partials/form/form";
 @import "partials/progress-bar";
 @import "partials/helpers";
+@import "partials/mixins";
+@import "partials/loader";
 
 body {
   margin: 0;
