--- a/centreon/www/front_src/src/styles/_main.scss
+++ b/centreon/www/front_src/src/styles/_main.scss
@@ -1,6 +1,7 @@
 @import "partials/typography";
 @import "partials/icons";
 @import "partials/header";
+@import "partials/side-nav";
 @import "partials/buttons";
 @import "partials/form/form";
 @import "partials/progress-bar";
